# fastbinning

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yaml
examples/: benchmark.py  categorical.py  categorical_pd.py  categorical_sklearn.py  numerical.py
python/fastbinning/: __init__.py  __init__.pyi  fastbinning.pyi
src/: lib.rs  models.rs  prepare.rs
src/core/: categorical.rs  mod.rs  numerical.rs  precategorical.rs  prenumerical.rs  woeiv.rs
