[package]
name = "fastbinning"
version = "0.0.2"
edition = "2024"

[lib]
name = "fastbinning"
crate-type = ["cdylib"]

[dependencies]
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
pyo3 = { version = "0.28", features = ["extension-module", "abi3-py38"] }
ndarray = "0.17"
numpy="0.28"
