[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "fastbinning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "maturin>=1.12.3",
]

[dependency-groups]
dev = [
    "numpy>=1.21.6",
    "pandas>=1.1.5",
    "scikit-learn>=1.0.2",
]
